--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
       background:#f1f2f6; box-sizing:border-box;
     }
 
-    .total-box{ flex:1; background:#e8f5e9; border:2px dashed var(--accent); padding:10px; border-radius:8px; text-align:center; margin:0; display:flex; align-items:center; justify-content:center; min-height:64px; }
-    .total-val{ font-size:1.3rem; font-weight:900; color:var(--accent); line-height:1; }
+    .total-box{ background:#e8f5e9; border:2px dashed var(--accent); padding:6px 10px; border-radius:8px; text-align:center; margin:8px 0; min-height:48px; display:flex; align-items:center; justify-content:center; }
+    .total-val{ font-size:1.1rem; font-weight:900; color:var(--accent); }
     .total-row{ display:flex; align-items:stretch; gap:12px; margin:15px 0; }
     .total-row .total-box{ flex:1; margin:0; }
-    .chk-toggle{ border:none; background:transparent; padding:0; margin:0; display:flex; align-items:center; justify-content:center; cursor:pointer; }
+    .chk-toggle{ width:46px; height:46px; border:3px solid #c1c9d1; border-radius:50%; position:relative; background:#fff; cursor:pointer; }
     .chk-toggle .chk-dot{ width:22px; height:22px; border-radius:999px; border:2px solid #90a4ae; background:transparent; display:inline-block; }
     .chk-toggle[aria-pressed="true"] .chk-dot{ background:#1e4f9a; border-color:#1e4f9a; }
     .chk-toggle[aria-pressed="true"]{ border-color:#90a4ae; }
@@ -120,7 +120,13 @@
       #row_each_grid .calc-input-wrap{ gap:5px; }
       #colM{ padding-left:6px; padding-right:6px; }
       #colX{ min-width:4ch; }
-    }
+    
+      .total-box{ padding:6px 8px; min-height:44px; margin:6px 0; }
+      .total-val{ font-size:1.05rem; }
+      .chk-wrap{ width:76px; min-height:52px; border-radius:12px; }
+      .chk-toggle{ width:40px; height:40px; }
+      .chk-toggle::after{ width:20px; height:20px; }
+}
 
     /* v3-41: modal overlay (Flow + Calculator + Note) */
     .modal{
@@ -232,19 +238,7 @@ button.action-main{
 .total-box{ min-height:74px; }
 
 /* v3-41: Chk control text inside box */
-.chk-wrap{
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  justify-content:center;
-  gap:4px;
-  width:92px;
-  min-height:64px;
-  border:2px solid #9aa3ad;
-  border-radius:10px;
-  background:#f8f9fb;
-  box-sizing:border-box;
-}
+.chk-wrap{ width:84px; min-height:56px; border:2px solid #9aa6b2; border-radius:12px; display:flex; flex-direction:column; align-items:center; justify-content:center; padding:4px 6px; gap:2px; box-sizing:border-box; }
 .chk-txt{
   font-size:0.62rem;
   font-weight:800;
@@ -253,8 +247,8 @@ button.action-main{
   text-align:center;
   width:100%;
 }
-.chk-top{ margin-top:2px; }
-.chk-bottom{ margin-bottom:2px; }
+.chk-top{ font-size:0.7rem; font-weight:800; line-height:1; }
+.chk-bottom{ font-size:0.7rem; font-weight:800; line-height:1; }
 
 /* v3-41: Note modal delete button positioned like input Note field */
 .note-modal-body{
@@ -326,7 +320,7 @@ button.action-main{
     <label>Each</label>
     <div class="calc-input-wrap">
       <input id="colT" type="number" placeholder="0.00" step="0.01" onfocus="handleEachFocus()" oninput="calc()" />
-      <button type="button" class="btn-calc-trigger" onclick="openCalculator('colT')">&#177;</button>
+      <button type="button" class="btn-calc-trigger" onclick="openCalculator('colT')">±</button>
     </div>
   </div>
 
@@ -334,7 +328,7 @@ button.action-main{
     <label>Fees</label>
     <div class="calc-input-wrap">
       <input id="colV" type="number" placeholder="0.00" step="0.01" onfocus="handleFeesFocus()" oninput="calc()" />
-      <button type="button" class="btn-calc-trigger" onclick="openCalculator('colV')">&#177;</button>
+      <button type="button" class="btn-calc-trigger" onclick="openCalculator('colV')">±</button>
     </div>
   </div>
 
@@ -342,7 +336,7 @@ button.action-main{
     <label>Multiplier</label>
     <div class="calc-input-wrap">
       <input id="colM" type="number" value="1" step="0.01" onfocus="handleMultiplierFocus()" oninput="calc()" />
-      <button type="button" class="btn-calc-trigger" onclick="openCalculator('colM')">&#177;</button>
+      <button type="button" class="btn-calc-trigger" onclick="openCalculator('colM')">±</button>
     </div>
   </div>
 
@@ -354,7 +348,7 @@ button.action-main{
 
 <div class="total-row">
   <div class="chk-wrap"><div class="chk-txt chk-top">Set</div><button id="chkToggle" type="button" class="chk-toggle" aria-pressed="false" onclick="toggleChk()"><span class="chk-dot" aria-hidden="true"></span></button><div class="chk-txt chk-bottom">chk flag</div></div>
-  <div class="total-box"><div class="total-val"><span id="symbol">&#163;</span> <span id="totalDisp">0.00</span></div></div>
+  <div class="total-box"><div class="total-val"><span id="symbol">£</span> <span id="totalDisp">0.00</span></div></div>
 </div>
 <div class="actions">
 <button class="action-main" onclick="handleMainAction()" style="background:var(--accent);">Create Staging record</button>
@@ -476,7 +470,7 @@ button.action-main{
   // v3-41: Flow modal context to ensure first selection is committed reliably
   let flowPendingAction = null; // "create" | "edit"
 
-  const symbols = { "GBP":"\u00A3","EUR":"\u20AC","USD":"\u0024","ZAR":"\u0052","CHF":"Fr","THB":"\u0E3F","RUR":"\u20BD","COP":"COL$" };
+  const symbols = { "GBP":"£","EUR":"€","USD":"$","ZAR":"R","CHF":"Fr","THB":"฿","RUR":"₽","COP":"COL$" };
 
   function logTrace(msg){
     const log = document.getElementById("trace_log");
@@ -1482,23 +1476,6 @@ if (!isSupportCategory(catNow) && typeSel){
     inp.oninput = null;
   }
 
-  function bindBackdropClose(modalId, closeFn){
-    const modal = document.getElementById(modalId);
-    if (!modal) return;
-
-    // Taps outside the modal-content close the modal (iOS Safari needs touchstart/pointerdown).
-    const handler = (ev) => {
-      if (ev && ev.target === modal){
-        if (ev.preventDefault) ev.preventDefault();
-        closeFn();
-      }
-    };
-
-    modal.addEventListener("click", handler, { passive:false });
-    modal.addEventListener("pointerdown", handler, { passive:false });
-    modal.addEventListener("touchstart", handler, { passive:false });
-  }
-
   
   function scrollPickToSelection(){
     const sel = document.getElementById(pickTargetId);
@@ -1739,12 +1716,6 @@ function renderPickList(query){
     // v3-41: ensure UI starts usable even before lookups are pulled
     localReset();
     renderPreview();
-
-    // v3-41: allow tap/click outside modals to close (incl. iPhone)
-    bindBackdropClose("pick_modal", closePickModal);
-    bindBackdropClose("calc_modal", closeCalculator);
-    bindBackdropClose("flow_modal", closeFlowModal);
-    bindBackdropClose("note_modal", closeNote);
     initSearchPickers();
     // v3-41: allow closing selection popups by clicking outside the dialog (Close button still available)
     const __pm = document.getElementById("pick_modal");
