--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport"/>
-<title>EBS Input v3-61</title>
+<title>EBS Input v3-62</title>
 <script async="" defer="" src="https://accounts.google.com/gsi/client"></script>
 <script async="" defer="" src="https://apis.google.com/js/api.js"></script>
 <style>
@@ -66,9 +66,9 @@
     /* v3-58: Total + Chk row (single dashed total; single circle) */
     
     .total-row{display:grid; grid-template-columns: 72px 1fr 92px; column-gap:8px; align-items:center; margin:8px 0 8px 0;}
-    .cur-wrap{display:flex; flex-direction:column; align-items:center; justify-content:center; position:relative; top:-1px;}
-    .cur-wrap label{width:100%; text-align:center;}
-    .cur-wrap select{text-align-last:center;}
+    .cur-wrap{display:flex; flex-direction:column; align-items:center; justify-content:center; position:relative; top:-4px;}
+    .cur-wrap label{width:100%; text-align:center; font-size:13px;}
+    .cur-wrap select{text-align-last:center; font-size:14px; height:34px; padding:6px 6px;}
 
 
     .currency-side{width:84px; margin-left:6px;}
@@ -117,7 +117,7 @@
     }
 
     /* v3-58: Total box shorter */
-    .total-box{background:#e8f5e9; border:2px dashed var(--accent); border-radius:10px; height:38px; display:flex; align-items:center; justify-content:center; padding:0 10px; box-sizing:border-box; margin:0; }
+    .total-box{background:#e8f5e9; border:1px dashed var(--accent); border-radius:10px; height:38px; display:flex; align-items:center; justify-content:center; padding:0 10px; box-sizing:border-box; margin:0; }
     .total-val{font-size:1.15rem; font-weight:900; color:var(--accent); line-height:1;}
 
 
@@ -177,7 +177,7 @@ button.action-main{ padding:8px 10px; border:none; border-radius:6px; font-weigh
   .calc-input-wrap{ gap:5px; }
   .btn-calc-trigger{background:transparent; color:var(--bridge); border:none; height:30px; width:30px; padding:0; cursor:pointer; display:flex; align-items:center; justify-content:center;}
   .total-row{display:grid; grid-template-columns: 72px 1fr 92px; column-gap:8px; align-items:center; margin:8px 0 8px 0;}
-  .total-box{background:#e8f5e9; border:2px dashed var(--accent); border-radius:10px; height:38px; display:flex; align-items:center; justify-content:center; padding:0 10px; box-sizing:border-box; margin:0; }
+  .total-box{background:#e8f5e9; border:1px dashed var(--accent); border-radius:10px; height:38px; display:flex; align-items:center; justify-content:center; padding:0 10px; box-sizing:border-box; margin:0; }
   .chk-dot{width:28px; height:28px; border-radius:50%; border:2px solid #95a5a6; background:#fff; box-sizing:border-box; transition:transform .08s ease, background .08s ease, border-color .08s ease;}
   .actions{ gap:6px; }
   button.action-main{ min-height:54px; padding:8px 10px; }
@@ -242,7 +242,11 @@ button.action-main{ padding:8px 10px; border:none; border-radius:6px; font-weigh
 /* v3-58 UI restore + chk + note delete */
 #colK{ height:38px; resize:none; overflow-x:auto; overflow-y:hidden; white-space:pre; }
 .note-row{ display:flex; gap:8px; align-items:stretch; }
-.note-del-btn{ height:38px; width:44px; border:none; border-radius:10px; background:var(--danger); color:#fff; font-weight:900; font-size:1.1rem; cursor:pointer; }
+.del-stack{ height:38px; width:44px; display:flex; flex-direction:column; align-items:center; justify-content:center; gap:2px; }
+.del-top,.del-bottom{ font-size:10px; line-height:1; font-weight:700; color:#333; }
+.del-btn-small{ height:18px; width:22px; border:none; border-radius:8px; background:var(--danger); color:#fff; font-weight:900; font-size:0.9rem; line-height:18px; padding:0; cursor:pointer; }
+.note-del-btn{ all:unset; display:flex; align-items:center; justify-content:center; }
+
 
 
 /* v3-58: actions sizing restored to v3-58 */
@@ -274,7 +278,7 @@ button.action-main{ padding:8px 10px; border:none; border-radius:6px; font-weigh
   
 /* v3-58: tighten Total + chk row to standard control height */
 .total-row{display:grid; grid-template-columns: 72px 1fr 92px; column-gap:8px; align-items:center; margin:8px 0 8px 0;}
-.total-box{background:#e8f5e9; border:2px dashed var(--accent); border-radius:10px; height:38px; display:flex; align-items:center; justify-content:center; padding:0 10px; box-sizing:border-box; margin:0; }
+.total-box{background:#e8f5e9; border:1px dashed var(--accent); border-radius:10px; height:38px; display:flex; align-items:center; justify-content:center; padding:0 10px; box-sizing:border-box; margin:0; }
 .total-val{font-size:1.15rem; font-weight:900; color:var(--accent); line-height:1;}
 
 /* v3-58: compact chk flag control (single circle, pressed blue) */
@@ -323,7 +327,7 @@ button.action-main{ padding:8px 10px; border:none; border-radius:6px; font-weigh
 <body>
 <div class="container">
 <div class="header-wrap">
-<div class="branding-row"><b>EBS Input</b> <span>v3-61</span></div>
+<div class="branding-row"><b>EBS Input</b> <span>v3-62</span></div>
 <div class="header-btns">
 <button class="btn-lookup btn-pull" onclick="checkEditState(() =&gt; cachePull())">Pull local<br/>Lookups</button>
 <button class="btn-lookup btn-refresh" id="refresh_btn" onclick="checkEditState(() =&gt; initRefresh())">Refresh<br/>Lookups<br/>from Sheets</button>
@@ -355,7 +359,11 @@ button.action-main{ padding:8px 10px; border:none; border-radius:6px; font-weigh
 <div style="margin-top:10px;"><label>Note</label>
 <div class="note-row">
   <textarea id="colK" rows="1" style="font-size:16px;" class="note-input" wrap="off"></textarea>
-  <button type="button" class="note-del-btn" onclick="clearNoteConfirm()" title="Delete Note">X</button>
+  <div class="del-stack" aria-label="Delete note">
+    <div class="del-top">DEL</div>
+    <button type="button" class="note-del-btn del-btn-small" onclick="clearNoteConfirm()" title="Delete Note">x</button>
+    <div class="del-bottom">text</div>
+  </div>
 </div>
 </div>
 <div style="display:grid; grid-template-columns:1fr 1fr 1fr; gap:10px; margin-top:10px;">
@@ -426,7 +434,7 @@ button.action-main{ padding:8px 10px; border:none; border-radius:6px; font-weigh
 <div class="preview-wrap" id="previewArea"></div>
 <div id="auth_status">iOS Sync Status: Idle</div>
 <button id="log_btn" onclick="toggleLog(true)">Display Trace Log</button>
-<div id="trace_log" onclick="toggleLog(false)">Trace: v3-61 Logic Circuit Breaker active.</div>
+<div id="trace_log" onclick="toggleLog(false)">Trace: v3-62 Logic Circuit Breaker active.</div>
 </div>
 <!-- v3-58 Flow modal (forced overlay) -->
 <div class="modal" id="flow_modal">
@@ -450,7 +458,11 @@ button.action-main{ padding:8px 10px; border:none; border-radius:6px; font-weigh
     <div class="modal-title">Edit Transaction Note</div>
     <div class="note-modal-body">
       <textarea id="modal_note_text" rows="1" class="note-input" wrap="off"></textarea>
-      <button class="note-del-btn" type="button" onclick="clearModalNoteConfirm()" aria-label="Delete note">X</button>
+      <div class="del-stack" aria-label="Delete note">
+        <div class="del-top">DEL</div>
+        <button class="note-del-btn del-btn-small" type="button" onclick="clearModalNoteConfirm()" aria-label="Delete note">x</button>
+        <div class="del-bottom">text</div>
+      </div>
     </div>
     <div class="modal-actions">
       <button class="btn-modal btn-green" onclick="commitNote()" type="button">Save</button>
@@ -509,7 +521,7 @@ button.action-main{ padding:8px 10px; border:none; border-radius:6px; font-weigh
 
   const SHEET_ID = "1DdjG4B8wB9llk7yOoRRO72G0XqHEgFkMIlLuusShA6E";
   const SHEET_TAB = "EBSinput";
-  const VER = "Excel Budget Sheet Input (v3-61)";
+  const VER = "Excel Budget Sheet Input (v3-62)";
   // v3-58: Support category detection must be dynamic and strict.
   // A Category is a Support category ONLY if its label starts with "Support" (case-sensitive, no trimming).
   function isSupportCategory(cat){ return (cat || "").startsWith("Support"); }
@@ -546,7 +558,7 @@ button.action-main{ padding:8px 10px; border:none; border-radius:6px; font-weigh
     // v3-58: enforce newline separation from first append
     const base = log.textContent && log.textContent.trim().length
       ? log.textContent
-      : "Trace: v3-61 Logic Circuit Breaker active.";
+      : "Trace: v3-62 Logic Circuit Breaker active.";
     log.textContent = base + "\n[" + now + "] " + msg;
     log.scrollTop = log.scrollHeight;
     console.log(msg);
@@ -1220,7 +1232,7 @@ function renderPreview(){
         + '<td class="w-tot">' + (r[22] || "") + "</td>"
         + '<td class="w-mnth">' + (r[25] || "") + "</td>"
         + '<td class="w-who">' + (r[33] || "") + "</td>"
-        + '<td class="w-del"><button type="button" onclick="deleteRow(' + idx + ')" style="background:#c0392b;color:white;border:none;border-radius:6px;padding:4px 6px;font-weight:900;cursor:pointer;">X</button></td>'
+        + '<td class="w-del"><div class="del-stack"><div class="del-top">DEL</div><button type="button" class="del-btn-small" onclick="deleteRow(' + idx + ')">x</button><div class="del-bottom">text</div></div></td>'
         + "</tr>";
     });
 
